globalaccel: don't trip over missing services

this notably happens when creating an item and immediately deleting it
again, before saving. in that scenario the service doesn't actually
exist yet and consequently there are no global shortcuts to clean up
anyway.

BUG: 478398